Добавление сервиса работы с БД, миграция, вынесение сервиса работы с ботом в отдельный модуль